Fix card overflow for mobiles

--- a/src/components/RecommendationsPage.scss
+++ b/src/components/RecommendationsPage.scss
@@ -14,9 +14,13 @@
 
         .content-wrapper {
             flex: 1;
+            max-height: 100%;
 
             .task-description {
                 flex: 1;
+                min-height: 0;
+                overflow-y: auto;
+                overflow-x: hidden;
             }
 
             .action-button {
